# TOOLCHAIN

./: .gitignore  LICENSE  README.md  build  convertEXE  convertROM  mb.h  mb.rom.js  pyproject.toml  requirements.txt  symbols.toml  test.toml
.github/workflows/: codeql.yml
fred/: asd.toml  build.toml  config.toml  dd.toml  symbols.toml  xx.toml
new/: XX.SYMBOLS  build  build.toml  config.toml  srcbuild.asm  symbols.toml  xx.toml
new/ASSETS/: xx.cassette  xx.js  xx.vcass
new/plugins/assemblers/: 1.as0  sbasm
new/src/: SYMBOLS.SYM  build.asm  symbols.toml  tst.py
new/tools/: bin2sphere  build  convertEXE  convertROM  srec2bin  srec2bin.c
resources/: build.template  config.template  config.toml  convertEXE  mb.toml  srec2bin  symbols.template  symbols.toml  this.template
src/: build.toml  config.toml  df.toml
srec2bin/: xx.as0.out  xx.asm
srec2bin/1.1/: srec2bin.c
srec2bin/1.1.1/: srec2bin.c
srec2bin_f/: SYMBOLS.SYM
