[project]
name = "convertSPHERE"
version = "1.3"
description = "Convert various SPHERE-1 related resources into different formats"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
]

[project.scripts]
repo = "repo:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "repo"